// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cli — --json output shape > gzipped CDXJ JSON snapshot 1`] = `
{
  "file": "<tmp>/fixture.wacz",
  "issues": [
    {
      "location": {
        "entry": "indexes/index.cdxj.gz",
      },
      "message": "Entry "indexes/index.cdxj.gz" is a gzipped CDXJ — wabac.js does not recognise .cdxj.gz / .cdx.gz",
      "rule": "cdxj/index-not-gzipped",
      "severity": "error",
    },
    {
      "location": {
        "entry": "indexes/index.cdxj",
      },
      "message": "indexes/index.cdxj is missing from the WACZ",
      "rule": "cdxj/filename-archive-relative",
      "severity": "error",
    },
  ],
  "stats": {
    "hosts": [],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 2,
    "info": 0,
    "passed": 9,
    "warnings": 0,
  },
  "valid": false,
  "waxlensVersion": "0.0.0",
}
`;

exports[`cli — --json output shape > missing-profile JSON snapshot 1`] = `
{
  "file": "<tmp>/fixture.wacz",
  "issues": [
    {
      "details": {
        "expected": "data-package",
      },
      "location": {
        "entry": "datapackage.json",
      },
      "message": "datapackage.json is missing the "profile" field",
      "rule": "datapackage/profile-required",
      "severity": "error",
    },
  ],
  "stats": {
    "hosts": [
      "example.com",
    ],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 1,
    "info": 0,
    "passed": 10,
    "warnings": 0,
  },
  "valid": false,
  "waxlensVersion": "0.0.0",
}
`;

exports[`cli — --json output shape > valid WACZ JSON snapshot 1`] = `
{
  "file": "<tmp>/fixture.wacz",
  "issues": [],
  "stats": {
    "hosts": [
      "example.com",
    ],
    "warcArchiveBytes": 246,
    "warcRecordCount": 1,
  },
  "summary": {
    "durationMs": 0,
    "failed": 0,
    "info": 0,
    "passed": 11,
    "warnings": 0,
  },
  "valid": true,
  "waxlensVersion": "0.0.0",
}
`;
